Update project search list component

--- a/Jira Ticket Editor/components/ProjectSearchList/ProjectSearchList.module.scss
+++ b/Jira Ticket Editor/components/ProjectSearchList/ProjectSearchList.module.scss
@@ -25,7 +25,7 @@
 
         // Dimensions
         width: 100%;
-        min-height: max(8vh, 80px);
+        height: max(8vh, 80px);
 
         // Display Properties
         display: flex;
@@ -101,8 +101,7 @@
 
         // Dimensions
         width: 100%;
-        min-height: calc(100% - max(5vh, 50px) - max(8vh, 80px));
-        max-height: calc(100% - max(5vh, 50px) - max(8vh, 80px));
+        height: calc(100% - max(13vh, 13px));
 
         // Display Properties
         display: flex;
@@ -111,11 +110,7 @@
         align-items: center;
 
         // Overflow
-        overflow-y: scroll;
-        
-        // scrollbar styling firefox
-        scrollbar-width: thin;
-        scrollbar-color: rgb(70, 70, 70) transparent;
+        overflow-y: auto;
 
         // scrollbar styling chromium
         &::-webkit-scrollbar {
@@ -133,7 +128,7 @@
         }
 
         &::-webkit-scrollbar-thumb:hover {
-            background: rgb(100, 100, 100);
+            background: rgb(70, 70, 70);
         }
 
         // Children
@@ -203,6 +198,52 @@
 
                 // Dimensions
                 height: 60%;
+            }
+        }
+
+        .rejectTile{
+            // Position
+            position: relative;
+            margin-top: max(1vh, 10px);
+
+            // Dimensions
+            width: 85%;
+            min-height: max(5vh, 50px);
+
+            // Display Properties
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+
+            // Border
+            border-radius: max(0.4vh, 4px);
+
+            // Padding
+            padding: max(1vh, 10px);
+
+            // Color
+            background-color: c.$boxGray;
+
+            // Shadow
+            box-shadow: 0 max(1px, 0.1vh) max(4px, 0.4vh) 0 rgba(0, 0, 0, 0.3);
+
+            &:last-child{
+                margin-bottom: max(1vh, 10px);
+            }
+
+            // Children
+            .projectTitle{
+                // Position
+                position: relative;
+                left: 0;
+
+                // Color
+                color: c.$text;
+                background-color: transparent;
+
+                // Text
+                font-weight: bold;
             }
         }
 
