--- a/Jira Ticket Editor/components/ticket components/RichTextInput/RichTextInput.css
+++ b/Jira Ticket Editor/components/ticket components/RichTextInput/RichTextInput.css
@@ -1234,7 +1234,7 @@
 .quill{
   /* Dimensions */
   box-sizing: border-box;
-  height: 100%;
+  min-height: 100%;
   width: 100%;
 
   /* Border */
