--- a/Jira Ticket Editor/components/ticket components/ShortTextInput/ShortTextInput.module.scss
+++ b/Jira Ticket Editor/components/ticket components/ShortTextInput/ShortTextInput.module.scss
@@ -6,6 +6,7 @@
     margin-bottom: max(1vh, 10px);
 
     // Dimensions
+    box-sizing: border-box;
     min-height: max(3vh, 30px);
     width: calc(100% - max(1.4vh, 14px));
 
@@ -16,12 +17,14 @@
     justify-content: flex-start;
     align-items: flex-start;
 
+    // Padding
+    padding-right: max(1vh, 10px);
+
     // Children
     .label{
         // Position
         position: relative;
         margin-right: max(1vh, 10px);
-        margin-bottom: max(0.3vh, 3px);
         margin-bottom: max(0.3vh, 3px);
         margin-top: 0;
 
@@ -46,7 +49,6 @@
     .inputField{
         // Position
         position: relative;
-        margin-right: max(1vh, 10px);
 
         // Dimensions
         flex: 1 1 35%;
@@ -65,9 +67,6 @@
 
         // Padding
         padding: max(1.2vh, 12px) max(0.8vh, 8px) max(1.2vh, 12px) max(0.8vh, 8px);
-
-        // Text
-        font-size: max(1.4vh, 14px);
 
         // Resize
         resize: none;
