Patch rich text editor

--- a/Jira Ticket Editor/components/ticket components/RichTextInput/RichTextInput.module.scss
+++ b/Jira Ticket Editor/components/ticket components/RichTextInput/RichTextInput.module.scss
@@ -142,7 +142,7 @@
     }
 
     // Focus
-    & .focused{
+    .focused{
         // Color
         background-color: rgb(68, 68, 68) !important;
 
