Fix line-height and simplify code (DRY)

--- a/Jira Ticket Editor/components/ticket components/ShortTextInput/ShortTextInput.module.scss
+++ b/Jira Ticket Editor/components/ticket components/ShortTextInput/ShortTextInput.module.scss
@@ -74,6 +74,9 @@
         // Overflow
         overflow: hidden;
 
+        // Text
+        line-height: 110%;
+
         // Hover
         &:hover{
             // Colors
